# Rust

./: .gitignore
advanced_rust/: Cargo.toml  text.txt
advanced_rust/src/: countdown  main  main.c  main.rs
advanced_rust/src/smart_pointers/: mod.rs  smart_box  smart_box.rs
agent_client/: Cargo.toml
agent_client/src/: main.rs
auth/src/: main.rs
auth/src/authentication/: mod.rs  (+1 more)
basic_rust/src/: compound-data-types  compound-data-types.rs  control_flow.rs  deref_and_drop  deref_and_drop.rs  enums  enums.rs  error_handling  error_handling.rs  functions  functions.rs  hash_maps  hash_maps.rs  if_else  if_else.rs  loops  loops.rs  main  main.rs  oop.rs  ownership  ownership.rs  rust_arc  rust_arc.rs  rust_rc  rust_rc.rs  rust_refcell  rust_refcell.rs  rust_thread  rust_thread.rs  rust_trait  rust_trait.rs  struct  struct.rs  test_struct  test_struct.rs  vectors.rs
c2_server/: Cargo.toml
c2_server/src/: main.rs
concurrent_log_processor/: Cargo.toml
concurrent_log_processor/src/: main  main.rs
file_analyzer/: Cargo.toml
file_analyzer/src/: main  main.rs
guessing_game/src/: main.rs
rust_exe_copy/: Cargo.toml
rust_exe_copy/src/: main.rs
rust_networking/: Cargo.toml
rust_networking/src/: client  client.rs  main.rs  server  server.rs
system_monitor/: Cargo.toml
system_monitor/src/: main.rs  system_info.rs
todo_cli/: tasks.txt
todo_cli/src/: main.rs
token_shop_project/: Cargo.toml  structer.md
token_shop_project/src/: auth.rs  cost.rs  error.rs  inventory.rs  main.rs
wraithmarked/: Cargo.toml
wraithmarked/src/: main  main.rs
