[package]
name = "agent_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.8"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
